--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,7 @@ h2 {
   font-size: 4.5rem;
 }
 
+.repos,
 .pinned {
   flex-wrap: wrap;
   justify-content: center;
@@ -42,8 +43,18 @@ h2 {
     border-radius: 20px;
     padding: 30px;
 
-    h4 {
-      margin: 0;
+    h3 {
+      margin-top: 0;
+    }
+  }
+}
+
+.repos {
+  div {
+    background-color: lighten($palepurple, 25%);
+
+    h3 {
+      color: white;
     }
   }
 }
